      finally got a fixed kernel.
  * Add debian/patches/12-psql-sensible-editor.patch: Use sensible-editor
    instead of vi as editor fallback in psql if $EDITOR and friends are not
    defined. (Closes: #451553)
  * Enable OSSP UUID support, add build dependency libossp-uuid-dev.
    (Closes: #451336)
  * Install some missing .so libraries.

 -- Martin Pitt <mpitt@debian.org>  Wed, 21 Nov 2007 17:56:11 +0100

postgresql-8.3 (8.3~beta2-1) experimental; urgency=low

  * Second beta release of PostgreSQL 8.3.
  * Remove patches which are upstream now:
    00upstream-encoding-abibreakage.patch, 12-pgpassfile-crash.patch
  * 03-gettext-domains.patch: Adapt to new upstream version.

 -- Martin Pitt <mpitt@debian.org>  Sun, 28 Oct 2007 12:37:43 -0400

postgresql-8.3 (8.3~beta1-2) experimental; urgency=low

  * debian/control: Update -contrib description for new modules.
  * debian/{control,rules}: Enable GSSAPI and LDAP support and add build
    dependencies libgssapi-dev and libldap2-dev.
  * Add debian/patches/00upstream-encoding-abibreakage.patch: Fix libpq ABI
    breakage wrt. ordering of encoding names. Taken from upstream CVS head.
    This requires a catalog bump, thus upgrades from 8.3~beta1-1 will break.
  * debian/postgresql-8.3.postrm:
    - Clean up rotated logs on purge when postgresql-common is already gone.
      (Closes: #447445)
    - Clean up default data dir/log file if 'pgdata'/'log' symbolic links do
      not exist.
    - Clean up environment file.

 -- Martin Pitt <mpitt@debian.org>  Sun, 14 Oct 2007 13:30:32 +0200

postgresql-8.3 (8.3~beta1-1) experimental; urgency=low

  * First beta release of PostgreSQL 8.3. Branch off the 8.2 packaging.
  * Drop debian/patches/12-m32r-tas.patch: Adopted upstream.
  * Drop debian/patches/04-timezone-symlinks.patch: Upstream now offers
    configure option --with-system-tzdata. Use it in debian/rules.
  * Drop debian/patches/50-contrib-enablemodules.patch: xml2 is now built